fixed nav bar align

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
+
 nav{
-    padding: 0px 100px;
+    padding: 24px 100px;
 }
 
 
@@ -40,6 +41,7 @@ ul li a{
 .banner h1{
     color: white;
     font-size:65px;
+    margin-top: 0px;
 
 
 }
@@ -219,7 +221,7 @@ nav ul{
 }
 
 .footer hr{
-    margin: 30px 0;
+   margin: 30px 0;
 }
 
 .footer p{
